; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_lwt_bpf.c_handle_gso_type.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_lwt_bpf.c_handle_gso_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.skb_shared_info = type { i32, i64 }

@SKB_GSO_DODGY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, i32, i32)* @handle_gso_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_gso_type(%struct.sk_buff* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.skb_shared_info*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %9 = call %struct.skb_shared_info* @skb_shinfo(%struct.sk_buff* %8)
  store %struct.skb_shared_info* %9, %struct.skb_shared_info** %7, align 8
  %10 = load i32, i32* @SKB_GSO_DODGY, align 4
  %11 = load i32, i32* %5, align 4
  %12 = or i32 %11, %10
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.skb_shared_info*, %struct.skb_shared_info** %7, align 8
  %15 = getelementptr inbounds %struct.skb_shared_info, %struct.skb_shared_info* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = or i32 %16, %13
  store i32 %17, i32* %15, align 8
  %18 = load %struct.skb_shared_info*, %struct.skb_shared_info** %7, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @skb_decrease_gso_size(%struct.skb_shared_info* %18, i32 %19)
  %21 = load %struct.skb_shared_info*, %struct.skb_shared_info** %7, align 8
  %22 = getelementptr inbounds %struct.skb_shared_info, %struct.skb_shared_info* %21, i32 0, i32 1
  store i64 0, i64* %22, align 8
  ret i32 0
}

declare dso_local %struct.skb_shared_info* @skb_shinfo(%struct.sk_buff*) #1

declare dso_local i32 @skb_decrease_gso_size(%struct.skb_shared_info*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
